app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
/*=================*/
/*  Card Credit
    Julien Sulpis
    Movie card with hover effect
    https://codepen.io/jsulpis/pen/XWypVxM

/*=================*/
:root {
  --color-gray-50: #f8fafc;
  --color-gray-100: #f1f5f9;
  --color-gray-200: #e1e7ef;
  --color-gray-300: #cbd5e1;
  --color-gray-400: #94a3b8;
  --color-gray-500: #65758b;
  --color-gray-600: #48566a;
  --color-gray-700: #344256;
  --color-gray-800: #1d283a;
  --color-gray-900: #0f1729;
  --color-gray-950: #020617;
  --color-primary-50: #f0f9ff;
  --color-primary-100: #e0f3ff;
  --color-primary-200: #b8e6ff;
  --color-primary-300: #7ad5ff;
  --color-primary-400: #33c2ff;
  --color-primary-500: #00a7f5;
  --color-primary-600: #0085c7;
  --color-primary-700: #006aa3;
  --color-primary-800: #005a8a;
  --color-primary-900: #004e7a;
  --color-primary-950: #003152;
  --color-danger-50: #fff0f0;
  --color-danger-100: #ffe0e0;
  --color-danger-200: #ffc7c7;
  --color-danger-300: #ffa3a3;
  --color-danger-400: #ff6b6b;
  --color-danger-500: #f53d3d;
  --color-danger-600: #f31212;
  --color-danger-700: #d60000;
  --color-danger-800: #b30000;
  --color-danger-900: #9e0000;
  --color-danger-950: #4d0000;
  --color-success-50: #f0fff4;
  --color-success-100: #dbffe8;
  --color-success-200: #b3ffcd;
  --color-success-300: #75ffa8;
  --color-success-400: #34f47a;
  --color-success-500: #0bda57;
  --color-success-600: #00b843;
  --color-success-700: #009436;
  --color-success-800: #007a2f;
  --color-success-900: #006629;
  --color-success-950: #003315;
  --color-gold-50: #fffde6;
  --color-gold-100: #fffac2;
  --color-gold-200: #fff18a;
  --color-gold-300: #ffe047;
  --color-gold-400: #ffcf0f;
  --color-gold-500: #f0b400;
  --color-gold-600: #cc8b00;
  --color-gold-700: #a86200;
  --color-gold-800: #944f00;
  --color-gold-900: #853e00;
  --color-gold-950: #471f00;
  --spacing-01: 4px;
  --spacing-02: 8px;
  --spacing-03: 12px;
  --spacing-04: 16px;
  --spacing-05: 20px;
  --spacing-06: 24px;
  --spacing-07: 28px;
  --spacing-08: 32px;
  --spacing-09: 40px;
}

/*=========================*/
/*      Sass Functions     */
/*=========================*/
/*=================*/
/*      Theme      */
/*=================*/
:root {
  color-scheme: light dark;
  --font-color-default: var(--color-gray-700);
  --font-color-strong: var(--color-gray-900);
  --font-color-light: var(--color-gray-400);
  --background-page: var(--color-gray-50);
  --border-light: 1px solid var(--font-color-light);
  --border-strong: 2px solid var(--font-color-strong);
  --border-radius-sm: var(--spacing-01);
  --border-radius-md: var(--spacing-02);
  --border-radius-lg: var(--spacing-03);
  --shadow-color-hsl: 222 47% 11%;
  --shadow-opacity: 0.15;
  --shadow-color: hsl(var(--shadow-color-hsl) / var(--shadow-opacity));
  --shadow-sm: 0px 4px 6px var(--shadow-color);
  --shadow-md: 0px 8px 12px var(--shadow-color), 0px 1px 3px var(--shadow-color);
  --shadow-lg: 0px 16px 24px var(--shadow-color),
    0px 2px 6px var(--shadow-color);
  --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
  --ease-out: cubic-bezier(0, 0, 0.2, 1);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
}

@media (prefers-color-scheme: dark) {
  :root {
    --font-color-default: var(--color-gray-200);
    --font-color-strong: var(--color-gray-50);
    --font-color-light: var(--color-gray-500);
    --background-page: var(--color-gray-900);
    --shadow-opacity: 0.45;
  }
}

html,
body {
  height: 100%;
  margin: 0;
}

body {
  display: flex;
  flex-direction: column;
}

main {
  flex-grow: 1;
}

footer {
  height: 10vh;
}

.logo_image {
  width: 4rem;
  height: auto;
}

.movie-card {
  --transition-duration: 700ms;
  color: white;
  background-color: #454545;
  position: relative;
  border-radius: 0.6em;
  overflow: hidden;
  font-size: 120%;
  height: min(21em, 90vh);
  max-width: 80vw;
  box-shadow: var(--shadow-lg), var(--shadow-lg), var(--shadow-lg);
  transition: transform var(--transition-duration);
}
.movie-card::after {
  content: "";
  position: absolute;
  inset: 0;
  background: radial-gradient(
    circle at 80% -150%,
    transparent 60%,
    rgba(0, 0, 0, 0.5)
  );
  transition: box-shadow var(--transition-duration);
  mix-blend-mode: overlay;
}

img {
  height: 100%;
  width: 100%;
  transition: transform var(--transition-duration);
  object-fit: cover;
  object-position: center;
}
.movie-card:hover .card-image::after {
  opacity: 1;
}
.card-image::after {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.6);
  pointer-events: none;
  transition: opacity 0.3s ease;
  opacity: 0;
}

.content {
  z-index: 1;
  position: absolute;
  bottom: min(2.5em, 1vmin);
  left: min(1.2em, 7vmin);
  right: min(1.2em, 8vmin);
  text-align: left;
  transition: transform var(--transition-duration) var(--ease-in-out);
}
.content > * {
  position: relative;
  will-change: transform;
}

.movie-card h1 {
  font-size: 1.1em;
  font-weight: 700;
  color: inherit;
  margin: 0;
}

.movie-card-link {
  color: inherit;
  text-decoration: none;
}

.movie-card-link:hover {
  text-decoration: none;
}

.movie-card-title {
  color: inherit;
}

.infos {
  font-size: 0.8em;
  font-weight: bold;
  color: #eee;
  display: flex;
  gap: 0.35em;
  align-items: flex-end;
}
.infos span {
  line-height: 1;
}

.synopsis {
  font-size: 0.8em;
  line-height: 1.4;
  margin-block: 0.75em;
  transition-delay: calc(var(--transition-duration) / 8);
  transition-property: opacity, transform;
  transition-duration: calc(var(--transition-duration) / 2);
}

.movie-card .icons {
  display: flex;
  gap: 0.5em;
}
.movie-card .icons svg {
  height: 1.2em;
  width: auto;
  transition-property: opacity, transform;
  transition-duration: calc(var(--transition-duration) / 2);
  transition-delay: 0s;
}

.movie-card:hover {
  transform: scale(1.03);
}
.movie-card:hover img {
  transform: scale(1.03);
}
.movie-card:hover .synopsis {
  transition-duration: var(--transition-duration);
  transition-delay: calc(var(--transition-duration) / 3);
}
.movie-card:hover .icons svg:nth-child(1) {
  transition-delay: calc(var(--transition-duration) / 1.8);
}
.movie-card:hover .icons svg:nth-child(2) {
  transition-delay: calc(var(--transition-duration) / 1.6);
}
.movie-card:hover .icons svg:nth-child(3) {
  transition-delay: calc(var(--transition-duration) / 1.4);
}

.movie-card:not(:hover) .synopsis {
  opacity: 0;
  transform: translateY(1em);
}
.movie-card:not(:hover) .icons svg {
  opacity: 0;
  transform: translateY(50%);
}
.movie-card:not(:hover) .content {
  transform: translateY(calc(100% - 4.5em));
}

.jumbotron-dark {
  background-color: rgba(248, 249, 250, 1) !important;
}

.jumbotron-darker {
  padding: 6rem 2rem;
  margin-bottom: 2rem;
  background-color: #e9ecef;
}

.actor-name,
small {
  font-size: 0.8em;
}

.drama-image {
  height: auto;
  width: 200px;
}

.drama-backdrop {
  height: auto;
  width: 300px;
}

/*==============================================================================================*/
/* FOOTER         ||---------------------------- */
/*==============================================================================================*/
.social-footer a {
  color: #6c757d;
}

.social-footer a:hover {
  color: #5c636a;
}

.nav {
  padding-right: 2em !important;
}

.nav-item {
  font-size: 1.2rem !important;
}

.alert {
  margin-bottom: 0rem !important;
}

/*==============================================================================================*/
/* Media Queries         ||---------------------------- */
/*==============================================================================================*/

@media screen and (max-width: 440px) {
  .jumbotron-darker {
    padding: 6rem 1rem;
  }

  #tmdb_form {
    width: 300px !important;
  }
}

@media (min-width: 441px) {
  #tmdb_form {
    width: 500px !important;
  }
}

